--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,10 @@
 .env.test.local
 .env.production.local
 
+# IDE config
+.vscode
+
+firebase-debug.log*
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
