--- a/package.json
+++ b/package.json
@@ -23,9 +23,9 @@
     "dotenv": "4.0.0",
     "enzyme": "^3.2.0",
     "enzyme-adapter-react-16": "^1.1.0",
-    "eslint": "4.10.0",
+    "eslint": "^4.13.0",
     "eslint-config-react-app": "^2.0.1",
-    "eslint-loader": "1.9.0",
+    "eslint-loader": "^1.9.0",
     "eslint-plugin-flowtype": "2.39.1",
     "eslint-plugin-import": "2.8.0",
     "eslint-plugin-jsx-a11y": "5.1.1",
@@ -33,18 +33,18 @@
     "extract-text-webpack-plugin": "3.0.2",
     "file-loader": "1.1.5",
     "fs-extra": "3.0.1",
-    "html-webpack-plugin": "2.29.0",
-    "jest": "20.0.4",
+    "html-webpack-plugin": "^2.30.1",
+    "jest": "^21.2.1",
     "postcss-flexbugs-fixes": "3.2.0",
-    "postcss-loader": "2.0.8",
-    "raf": "3.4.0",
+    "postcss-loader": "^2.0.9",
+    "raf": "^3.4.0",
     "react-dev-utils": "^4.2.1",
-    "style-loader": "0.19.0",
+    "style-loader": "^0.19.0",
     "sw-precache-webpack-plugin": "0.11.4",
-    "url-loader": "0.6.2",
-    "webpack": "3.8.1",
-    "webpack-dev-server": "2.9.4",
-    "webpack-manifest-plugin": "1.3.2"
+    "url-loader": "^0.6.2",
+    "webpack": "^3.10.0",
+    "webpack-dev-server": "^2.9.7",
+    "webpack-manifest-plugin": "^1.3.2"
   },
   "scripts": {
     "start": "node scripts/start.js",
