--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,10 +4,10 @@
 #
 version: 2
 jobs:
-  build:
+  build-job:
     docker:
       # specify the version you desire here
-      - image: circleci/node:7.10
+      - image: circleci/node:9.2
       
       # Specify service dependencies here if necessary
       # CircleCI maintains a library of pre-built images
@@ -35,3 +35,25 @@ jobs:
         
       # run tests!
       - run: npm test
+
+  deploy-job:
+       docker:
+         - image: circleci/node:9.2
+
+       working_directory: /tmp/repo  
+       steps:
+         - run:
+             name: Deploy Master to Firebase
+             command: ./node_modules/.bin/firebase deploy --token=$FIREBASE_DEPLOY_TOKEN
+
+workflows:
+  version: 2
+  build-deploy:
+    jobs:
+      - build-job
+      - deploy-job:
+          requires:
+            - build-job
+          filters:
+            branches:
+              only: master
