--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "eslint-plugin-react": "7.4.0",
     "extract-text-webpack-plugin": "3.0.2",
     "file-loader": "1.1.5",
+    "firebase-tools": "^3.16.0",
     "fs-extra": "3.0.1",
     "html-webpack-plugin": "^2.30.1",
     "jest": "^21.2.1",
