--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,6 +23,10 @@ jobs:
         
       - run: npm test
 
+      test:
+        post:
+          - bash <(curl -s https://codecov.io/bash)
+
   deploy-job:
       docker:
         - image: circleci/node:9.2
