Test after success

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,8 +23,8 @@ jobs:
         
       - run: npm test
 
-      test:
-        post: bash <(curl -s https://codecov.io/bash)
+    after_success:
+      - bash <(curl -s https://codecov.io/bash)
 
   deploy-job:
       docker:
