--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,8 +26,7 @@ jobs:
       - run:
           name: Build Success
           when: on_success
-          command:
-            - bash <(curl -s https://codecov.io/bash)
+          command: 'echo "hola"'
 
   deploy-job:
       docker:
