--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,7 +26,7 @@ jobs:
       - run:
           name: Build Success
           when: on_success
-          command: 'echo "hola"'
+          command: 'bash <(curl -s https://codecov.io/bash)'
 
   deploy-job:
       docker:
