--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "babel-preset-react-app": "^3.1.1",
     "babel-runtime": "^6.26.0",
     "case-sensitive-paths-webpack-plugin": "^2.1.1",
-    "chalk": "1.1.3",
+    "chalk": "^2.3.1",
     "css-loader": "^0.28.10",
     "dotenv": "^5.0.1",
     "enzyme": "^3.3.0",
@@ -51,8 +51,9 @@
   "scripts": {
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
+    "build:dev": "npm run build -- --env=local",
     "test": "node scripts/test.js --env=jsdom --ci --testResultsProcessor=jest-junit --coverage",
-    "test:watch": "node scripts/test.js --env=jsdom"
+    "test:watch": "node scripts/test.js --env=jsdom --watch --coverage"
   },
   "jest": {
     "coverageDirectory": "results/coverage",
