--- a/package.json
+++ b/package.json
@@ -18,31 +18,31 @@
     "babel-preset-react-app": "^3.1.1",
     "babel-runtime": "^6.26.0",
     "case-sensitive-paths-webpack-plugin": "^2.1.1",
-    "chalk": "1.1.3",
+    "chalk": "^2.3.1",
     "css-loader": "^0.28.10",
-    "dotenv": "^5.0.0",
+    "dotenv": "^5.0.1",
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
     "eslint": "^4.18.1",
     "eslint-config-react-app": "^2.1.0",
-    "eslint-loader": "^1.9.0",
-    "eslint-plugin-flowtype": "2.46.1",
-    "eslint-plugin-import": "2.9.0",
-    "eslint-plugin-jsx-a11y": "6.0.3",
-    "eslint-plugin-react": "7.7.0",
+    "eslint-loader": "^2.0.0",
+    "eslint-plugin-flowtype": "^2.46.1",
+    "eslint-plugin-import": "^2.9.0",
+    "eslint-plugin-jsx-a11y": "^6.0.3",
+    "eslint-plugin-react": "^7.7.0",
     "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^1.1.10",
-    "firebase-tools": "^3.17.3",
-    "fs-extra": "5.0.0",
+    "firebase-tools": "^3.17.4",
+    "fs-extra": "^5.0.0",
     "html-webpack-plugin": "^2.30.1",
     "jest": "^22.4.2",
     "jest-junit": "^3.6.0",
-    "postcss-flexbugs-fixes": "3.3.0",
+    "postcss-flexbugs-fixes": "^3.3.0",
     "postcss-loader": "^2.1.1",
     "raf": "^3.4.0",
     "react-dev-utils": "^5.0.0",
     "style-loader": "^0.20.2",
-    "sw-precache-webpack-plugin": "0.11.4",
+    "sw-precache-webpack-plugin": "^0.11.4",
     "url-loader": "^0.6.2",
     "webpack": "^3.11.0",
     "webpack-dev-server": "^2.11.1",
@@ -51,8 +51,9 @@
   "scripts": {
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
+    "build:dev": "npm run build -- --env=local",
     "test": "node scripts/test.js --env=jsdom --ci --testResultsProcessor=jest-junit --coverage",
-    "test:watch": "node scripts/test.js --env=jsdom"
+    "test:watch": "node scripts/test.js --env=jsdom --watch --coverage"
   },
   "jest": {
     "coverageDirectory": "results/coverage",
