--- a/config/env/.env.production
+++ b/config/env/.env.production
@@ -1,3 +1,3 @@
 # react public vars
-REACT_APP_WEBSITE_NAME='Production | Raúl Moya'
+REACT_APP_WEBSITE_NAME='Raúl Moya | Frontend Engineer & Javascript Developer'
 REACT_APP_ENV='Production'
