--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "chalk": "^2.3.2",
     "css-loader": "^0.28.11",
     "dotenv": "^5.0.1",
+    "dotenv-expand": "^4.2.0",
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
     "eslint": "^4.19.1",
@@ -37,6 +38,7 @@
     "html-webpack-plugin": "^3.1.0",
     "jest": "^22.4.3",
     "jest-junit": "^3.6.0",
+    "postcss-cssnext": "^3.1.0",
     "postcss-flexbugs-fixes": "^3.3.0",
     "postcss-loader": "^2.1.3",
     "raf": "^3.4.0",
@@ -53,7 +55,7 @@
     "build": "node scripts/build.js",
     "build:dev": "npm run build -- --env=local",
     "test": "node scripts/test.js --env=jsdom --ci --testResultsProcessor=jest-junit --coverage",
-    "test:watch": "node scripts/test.js --env=jsdom --watch --coverage"
+    "test:watch": "node scripts/test.js --env=jsdom"
   },
   "jest": {
     "coverageDirectory": "results/coverage",
