--- a/config/env/.env
+++ b/config/env/.env
@@ -1,3 +1,4 @@
 # react public vars
-REACT_APP_WEBSITE_NAME='Local | Raúl Moya'
+REACT_APP_VERSION=$npm_package_version
 REACT_APP_ENV='LOCAL'
+REACT_APP_WEBSITE_NAME='${REACT_APP_ENV} | Raúl Moya'
