--- a/firebase.json
+++ b/firebase.json
@@ -1,6 +1,9 @@
 {
   "database": {
-    "rules": "database.rules.json"
+    "rules": {
+      ".read": "auth != null",
+      ".write": "auth != null"
+    }
   },
   "hosting": {
     "public": "build",
