--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "short_name": "Raul Moya",
-  "name": "Raúl Moya | Frontend Engineer & Javascript Developer",
+  "name": "Raúl Moya | Software Engineer & Javascript Developer",
   "icons": [
     {
       "src": "favicon.ico",
