--- a/config/env/.env.production
+++ b/config/env/.env.production
@@ -1,3 +1,3 @@
 # react public vars
 REACT_APP_ENV='Production'
-REACT_APP_WEBSITE_NAME='Raúl Moya | Frontend Engineer & Javascript Developer'
+REACT_APP_WEBSITE_NAME='Raúl Moya | Software Engineer & Javascript Developer'
