--- a/config/env/.env.production
+++ b/config/env/.env.production
@@ -1,3 +1,6 @@
 # react public vars
 REACT_APP_ENV='Production'
-REACT_APP_WEBSITE_NAME='Raúl Moya | Software Engineer & Javascript Developer'
+REACT_APP_WEBSITE_NAME='Raúl Moya | ${REACT_APP_WEBSITE_SUBTITLE}'
+REACT_APP_WEBSITE_SUBTITLE='Software Engineer & Javascript Developer'
+
+REACT_APP_PAGECLIP='QBX8OwMVNln17IxKu5FqH4riI14KBuHg'
