--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "whatwg-fetch": "^2.0.4"
   },
   "devDependencies": {
-    "autoprefixer": "^8.4.1",
+    "autoprefixer": "^8.5.0",
     "babel-core": "^6.26.3",
     "babel-eslint": "^8.2.3",
     "babel-jest": "^22.4.3",
@@ -28,9 +28,9 @@
     "eslint-config-react-app": "^2.1.0",
     "eslint-loader": "^2.0.0",
     "eslint-plugin-flowtype": "^2.46.3",
-    "eslint-plugin-import": "^2.11.0",
+    "eslint-plugin-import": "^2.12.0",
     "eslint-plugin-jsx-a11y": "^6.0.3",
-    "eslint-plugin-react": "^7.8.1",
+    "eslint-plugin-react": "^7.8.2",
     "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^1.1.11",
     "firebase-tools": "^3.18.4",
@@ -65,8 +65,7 @@
       "clover"
     ],
     "collectCoverageFrom": [
-      "src/components/**/*.{js,jsx,mjs}",
-      "src/containers/**/*.{js,jsx,mjs}"
+      "src/*/**/*.{js,jsx,mjs}"
     ],
     "setupFiles": [
       "<rootDir>/config/polyfills.js",
@@ -77,9 +76,11 @@
       "<rootDir>/src/**/?(*.)(spec|test).{js,jsx,mjs}"
     ],
     "coveragePathIgnorePatterns": [
-      "/__test?(s)__/"
+      "/__test?(s)__/",
+      "/services/",
+      "/utils/",
+      "/data/"
     ],
-    "testEnvironment": "node",
     "testURL": "http://localhost",
     "transform": {
       "^.+\\.(js|jsx|mjs)$": "<rootDir>/node_modules/babel-jest",
