--- a/package.json
+++ b/package.json
@@ -3,11 +3,11 @@
   "version": "0.8.0",
   "private": true,
   "dependencies": {
+    "object-assign": "^4.1.1",
+    "promise": "^8.0.1",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
-    "whatwg-fetch": "^2.0.4",
-    "promise": "^8.0.1",
-    "object-assign": "^4.1.1"
+    "whatwg-fetch": "^2.0.4"
   },
   "devDependencies": {
     "autoprefixer": "^8.5.0",
@@ -28,7 +28,7 @@
     "eslint-config-react-app": "^2.1.0",
     "eslint-loader": "^2.0.0",
     "eslint-plugin-flowtype": "^2.46.3",
-    "eslint-plugin-import": "^2.11.0",
+    "eslint-plugin-import": "^2.12.0",
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-react": "^7.8.2",
     "extract-text-webpack-plugin": "^3.0.2",
@@ -65,8 +65,7 @@
       "clover"
     ],
     "collectCoverageFrom": [
-      "src/components/**/*.{js,jsx,mjs}",
-      "src/containers/**/*.{js,jsx,mjs}"
+      "src/*/**/*.{js,jsx,mjs}"
     ],
     "setupFiles": [
       "<rootDir>/config/polyfills.js",
@@ -77,9 +76,11 @@
       "<rootDir>/src/**/?(*.)(spec|test).{js,jsx,mjs}"
     ],
     "coveragePathIgnorePatterns": [
-      "/__test?(s)__/"
+      "/__test?(s)__/",
+      "/services/",
+      "/utils/",
+      "/data/"
     ],
-    "testEnvironment": "node",
     "testURL": "http://localhost",
     "transform": {
       "^.+\\.(js|jsx|mjs)$": "<rootDir>/node_modules/babel-jest",
