--- a/firebase.json
+++ b/firebase.json
@@ -17,7 +17,7 @@
     ],
     "headers": [
       {
-        "source" : "**/*.@(jpg|jpeg|gif|png|css)",
+        "source" : "**/*.@(jpg|jpeg|gif|png)",
         "headers" : [
           {
             "key" : "Cache-Control",
