--- a/firebase.json
+++ b/firebase.json
@@ -17,7 +17,7 @@
     ],
     "headers": [
       {
-        "source" : "**/*.@(jpg|jpeg|gif|png)",
+        "source" : "**/*.@(jpg|jpeg|gif|png|css|js|woff2|woff)",
         "headers" : [
           {
             "key" : "Cache-Control",
