--- a/config/env/.env
+++ b/config/env/.env
@@ -1,7 +1,8 @@
 # react public vars
 REACT_APP_VERSION=$npm_package_version
 
-REACT_APP_ENV=''
-REACT_APP_WEBSITE_NAME=''
+REACT_APP_WEBSITE_AUTHOR=''
+REACT_APP_WEBSITE_SUBTITLE=''
+REACT_APP_WEBSITE_TITLE=''
 
 REACT_APP_PAGECLIP=''
