--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "promise": "^8.0.1",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
+    "simple-line-icons": "^2.4.1",
     "whatwg-fetch": "^2.0.4"
   },
   "devDependencies": {
