--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "whatwg-fetch": "^2.0.4"
   },
   "devDependencies": {
-    "autoprefixer": "^9.1.0",
+    "autoprefixer": "^9.1.1",
     "babel-core": "^6.26.3",
     "babel-eslint": "^8.2.6",
     "babel-jest": "^23.4.2",
@@ -23,28 +23,28 @@
     "css-loader": "^1.0.0",
     "dotenv": "^6.0.0",
     "dotenv-expand": "^4.2.0",
-    "enzyme": "^3.3.0",
-    "enzyme-adapter-react-16": "^1.1.1",
+    "enzyme": "^3.4.1",
+    "enzyme-adapter-react-16": "^1.2.0",
     "eslint": "^5.3.0",
     "eslint-config-react-app": "^2.1.0",
     "eslint-loader": "^2.1.0",
     "eslint-plugin-flowtype": "^2.50.0",
-    "eslint-plugin-import": "^2.13.0",
+    "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-jsx-a11y": "^6.1.1",
-    "eslint-plugin-react": "^7.10.0",
+    "eslint-plugin-react": "^7.11.0",
     "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^1.1.11",
-    "firebase-tools": "^4.0.0",
+    "firebase-tools": "^4.1.0",
     "fs-extra": "^7.0.0",
     "html-webpack-plugin": "^3.2.0",
     "jest": "^23.5.0",
     "jest-junit": "^5.1.0",
     "postcss-cssnext": "^3.1.0",
     "postcss-flexbugs-fixes": "^4.1.0",
-    "postcss-loader": "^2.1.6",
+    "postcss-loader": "^3.0.0",
     "raf": "^3.4.0",
     "react-dev-utils": "^5.0.1",
-    "style-loader": "^0.21.0",
+    "style-loader": "^0.22.1",
     "sw-precache-webpack-plugin": "^0.11.5",
     "url-loader": "^1.0.1",
     "webpack": "^3.12.0",
@@ -55,54 +55,10 @@
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
     "build:dev": "npm run build -- --env=local",
-    "test": "node scripts/test.js --env=jsdom --ci --testResultsProcessor=jest-junit --coverage",
-    "test:watch": "node scripts/test.js --env=jsdom --watch --coverage"
-  },
-  "jest": {
-    "coverageDirectory": "results/coverage",
-    "coverageReporters": [
-      "lcov",
-      "text-summary",
-      "clover"
-    ],
-    "collectCoverageFrom": [
-      "src/*/**/*.{js,jsx,mjs}"
-    ],
-    "setupFiles": [
-      "<rootDir>/config/polyfills.js",
-      "<rootDir>/config/jest/enzyme.js"
-    ],
-    "testMatch": [
-      "<rootDir>/src/**/__tests__/?(*.)(spec|test).{js,jsx,mjs}",
-      "<rootDir>/src/**/?(*.)(spec|test).{js,jsx,mjs}"
-    ],
-    "coveragePathIgnorePatterns": [
-      "/__test?(s)__/",
-      "/services/",
-      "/utils/",
-      "/data/"
-    ],
-    "testURL": "http://localhost",
-    "transform": {
-      "^.+\\.(js|jsx|mjs)$": "<rootDir>/node_modules/babel-jest",
-      "^.+\\.css$": "<rootDir>/config/jest/cssTransform.js",
-      "^(?!.*\\.(js|jsx|mjs|css|json)$)": "<rootDir>/config/jest/fileTransform.js"
-    },
-    "transformIgnorePatterns": [
-      "[/\\\\]node_modules[/\\\\].+\\.(js|jsx|mjs)$"
-    ],
-    "moduleNameMapper": {
-      "^react-native$": "react-native-web"
-    },
-    "moduleFileExtensions": [
-      "web.js",
-      "mjs",
-      "js",
-      "json",
-      "web.jsx",
-      "jsx",
-      "node"
-    ]
+    "test": "node scripts/test.js --env=jsdom --ci --coverage --config config/jest/jest.config.json",
+    "test:watch": "node scripts/test.js --env=jsdom --watch --coverage --config config/jest/jest.config.json",
+    "test:e2e:open": "cypress open --project ./config/cypress",
+    "test:e2e": "cypress run --project ./config/cypress"
   },
   "jest-junit": {
     "suiteName": "jest tests",
