Update to webpack 4

--- a/config/jest/jest.config.json
+++ b/config/jest/jest.config.json
@@ -26,7 +26,7 @@
   ],
   "testURL": "http://localhost",
   "transform": {
-    "^.+\\.(js|jsx|mjs)$": "<rootDir>/node_modules/babel-jest",
+    "^.+\\.(js|jsx|mjs)$": "<rootDir>/config/jest/babelTransform.js",
     "^.+\\.css$": "<rootDir>/config/jest/cssTransform.js",
     "^(?!.*\\.(js|jsx|mjs|css|json)$)": "<rootDir>/config/jest/fileTransform.js"
   },
