--- a/.eslintrc
+++ b/.eslintrc
@@ -1,7 +1,4 @@
 {
-  "extends": "react-app",
-  "rules": {
-    "jsx-a11y/href-no-hash": "off",
-    "jsx-a11y/anchor-is-valid": ["warn", { "aspects": ["invalidHref"] }]
-  }
+  "extends": ["react-app", "plugin:jsx-a11y/recommended"],
+  "plugins": ["jsx-a11y"]
 }
