--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "own-site",
-  "version": "1.0.0",
+  "version": "0.7.0",
   "private": true,
   "dependencies": {
     "object-assign": "^4.1.1",
@@ -11,13 +11,16 @@
     "whatwg-fetch": "^2.0.4"
   },
   "devDependencies": {
+    "@babel/core": "7.0.0-beta.46",
+    "@babel/runtime": "7.0.0-beta.46",
     "autoprefixer": "^9.1.1",
-    "babel-core": "^6.26.3",
+    "babel-core": "^7.0.0-bridge.0",
     "babel-eslint": "^8.2.6",
     "babel-jest": "^23.4.2",
-    "babel-loader": "^7.1.5",
-    "babel-preset-react-app": "^3.1.2",
-    "babel-runtime": "^6.26.0",
+    "babel-loader": "^8.0.0-beta.4",
+    "babel-plugin-named-asset-import": "^1.0.0-next.3e165448",
+    "babel-preset-react-app": "^4.0.0-next.3e165448",
+    "bfj": "^6.1.1",
     "case-sensitive-paths-webpack-plugin": "^2.1.2",
     "chalk": "^2.4.1",
     "css-loader": "^1.0.0",
@@ -26,7 +29,7 @@
     "enzyme": "^3.4.1",
     "enzyme-adapter-react-16": "^1.2.0",
     "eslint": "^5.3.0",
-    "eslint-config-react-app": "^2.1.0",
+    "eslint-config-react-app": "^3.0.0-next.3e165448",
     "eslint-loader": "^2.1.0",
     "eslint-plugin-flowtype": "^2.50.0",
     "eslint-plugin-import": "^2.14.0",
@@ -37,18 +40,27 @@
     "firebase-tools": "^4.1.0",
     "fs-extra": "^7.0.0",
     "html-webpack-plugin": "^3.2.0",
+    "identity-obj-proxy": "^3.0.0",
     "jest": "^23.5.0",
     "jest-junit": "^5.1.0",
+    "loader-utils": "^1.1.0",
+    "mini-css-extract-plugin": "^0.4.1",
+    "optimize-css-assets-webpack-plugin": "^5.0.0",
     "postcss-cssnext": "^3.1.0",
     "postcss-flexbugs-fixes": "^4.1.0",
     "postcss-loader": "^3.0.0",
+    "postcss-safe-parser": "^4.0.1",
     "raf": "^3.4.0",
-    "react-dev-utils": "^5.0.1",
+    "react-dev-utils": "^6.0.0-next.3e165448",
+    "resolve": "^1.8.1",
     "style-loader": "^0.22.1",
+    "svgr": "^1.10.0",
     "sw-precache-webpack-plugin": "^0.11.5",
+    "thread-loader": "^1.2.0",
+    "uglifyjs-webpack-plugin": "^1.2.7",
     "url-loader": "^1.0.1",
-    "webpack": "^3.12.0",
-    "webpack-dev-server": "^2.11.2",
+    "webpack": "^4.16.5",
+    "webpack-dev-server": "^3.1.5",
     "webpack-manifest-plugin": "^2.0.3"
   },
   "scripts": {
