--- a/.eslintrc
+++ b/.eslintrc
@@ -1,4 +1,8 @@
 {
   "extends": ["react-app", "plugin:jsx-a11y/recommended"],
-  "plugins": ["jsx-a11y"]
+  "plugins": ["jsx-a11y"],
+  "rules": {
+    "jsx-a11y/href-no-hash": "off",
+    "jsx-a11y/anchor-is-valid": ["warn", { "aspects": ["invalidHref"] }]
+  }
 }
