--- a/package.json
+++ b/package.json
@@ -11,15 +11,15 @@
     "whatwg-fetch": "^2.0.4"
   },
   "devDependencies": {
-    "@babel/core": "7.0.0",
-    "@babel/runtime": "7.0.0",
+    "@babel/core": "^7.0.0",
+    "@babel/runtime": "^7.0.0",
     "autoprefixer": "^9.1.3",
     "babel-core": "^7.0.0-bridge.0",
     "babel-eslint": "^9.0.0",
     "babel-jest": "^23.4.2",
     "babel-loader": "^8.0.0",
     "babel-plugin-named-asset-import": "^1.0.0-next.03604a46",
-    "babel-preset-react-app": "^4.0.0-next.096703ab",
+    "babel-preset-react-app": "^4.0.0-next.a671462c",
     "bfj": "^6.1.1",
     "case-sensitive-paths-webpack-plugin": "^2.1.2",
     "chalk": "^2.4.1",
@@ -37,7 +37,7 @@
     "eslint-plugin-react": "^7.11.1",
     "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^2.0.0",
-    "firebase-tools": "^4.2.0",
+    "firebase-tools": "^4.2.1",
     "fs-extra": "^7.0.0",
     "html-webpack-plugin": "^3.2.0",
     "identity-obj-proxy": "^3.0.0",
@@ -51,7 +51,7 @@
     "postcss-loader": "^3.0.0",
     "postcss-safe-parser": "^4.0.1",
     "raf": "^3.4.0",
-    "react-dev-utils": "^6.0.0-next.3e165448",
+    "react-dev-utils": "^6.0.0-next.a671462c",
     "resolve": "^1.8.1",
     "style-loader": "^0.23.0",
     "svgr": "^1.10.0",
